<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!--  TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/restaurantes_camino"
            android:textAppearance="?android:attr/textAppearanceLarge" /-->

    </LinearLayout>

    <!--  LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enviar" />
    </LinearLayout-->

    <!--LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonCercanos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cargar" />

    </LinearLayout-->

    <!-- LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonTodos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todos" />

    </LinearLayout-->
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:paddingTop="40dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonFiltro"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/filtro" />
    </LinearLayout>
       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonFiltroCercanos"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/filtroCercanos" />

    </LinearLayout>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonMapRestaurantes"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/mapTodos" />

    </LinearLayout>
     
     
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/salir"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/salir" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:paddingTop="40dp"
            android:contentDescription="@string/author"
            android:src="@drawable/imginicio" />

    </LinearLayout>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/musica"
            android:layout_width="150dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
           
            android:text="@string/musicamino" />

    </LinearLayout>

</LinearLayout>